--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,7 +1,7 @@
 ﻿apiVersion: v1
 kind: Service
 metadata:
-  name: github-aks-cicd
+  name: github-aks-cicd2
   labels:
     app: github-aks-cicd
 spec:
